Fixes Tic Tac Toe title and link and removes incorrect links

--- a/projects.html
+++ b/projects.html
@@ -39,9 +39,9 @@
 
       <section class="projects__gallery">
         <div class="projects__project">
-          <h3 class="project__heading">Tic-Tac-Toe</h3>
+          <h3 class="project__heading">Tic-Tac-Toe Game</h3>
           <a class="project__image-container"
-            href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/"
+            href="https://pams-tic-tac-toe.firebaseapp.com/"
             target="_blank"
           >
             <img class="project__image" src="./assets/images/tic-tac-toe.png" />
@@ -72,12 +72,9 @@
         </div>
         <div class="projects__project">
           <h3 class="project__heading">FakeOS: Windows 98</h3>
-          <a class="project__image-container"
-            href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/"
-            target="_blank"
-          >
+          <div class="project__image-container">
             <img class="project__image" src="./assets/images/fake-os.png" />
-          </a>
+          </div>
           <p class="project__para">
             A fake operating system created using HTML, SCSS and JavaScript.
           </p>
@@ -93,12 +90,9 @@
         </div>
         <div class="projects__project">
           <h3 class="project__heading">Google Books API Search Engine</h3>
-          <a class="project__image-container"
-            href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/"
-            target="_blank"
-          >
+          <div class="project__image-container">
             <img class="project__image" src="./assets/images/google-books.png" />
-          </a>
+          </div>
           <p class="project__para">
             A search engine for the Google Books API built using SCSS and React.js. Features include modals to display additional book details.
           </p>
@@ -114,12 +108,9 @@
         </div>
         <div class="projects__project">
           <h3 class="project__heading">React eShop</h3>
-          <a class="project__image-container"
-            href="https://peglione.github.io/Project-0-Tic-Tac-Toe-Game/public/"
-            target="_blank"
-          >
+          <div class="project__image-container">
             <img class="project__image" src="./assets/images/react-e-shop.png" />
-          </a>
+          </div>
           <p class="project__para">
             A mock e-commerce app for retro videogames built using SCSS React.js and a Firestore database. Features include a product carousel, a product grid, product order forms and a cart.
           </p>
