Adds hosted links and updates project styling

--- a/projects.html
+++ b/projects.html
@@ -80,6 +80,15 @@
           </p>
           <p class="project__para project__para--link-container">
             <a 
+              class="project__link" 
+              href="https://peglione.github.io/FakeOS-Windows-98/" 
+              target="_blank"
+            >
+              Click Here To Try It Out
+            </a>
+          </p>
+          <p class="project__para project__para--link-container">
+            <a 
               class="project__link"
               href="https://github.com/PegliOne/FakeOS-Windows-98"
               target="_blank"
@@ -98,6 +107,15 @@
           </p>
           <p class="project__para project__para--link-container">
             <a 
+              class="project__link" 
+              href="https://clever-flan-279eab.netlify.app/" 
+              target="_blank"
+            >
+              Click Here To Try It Out
+            </a>
+          </p>
+          <p class="project__para project__para--link-container">
+            <a 
               class="project__link"
               href="https://github.com/PegliOne/Google-Books-API-Search-Engine"
               target="_blank"
@@ -113,6 +131,15 @@
           </div>
           <p class="project__para">
             A mock e-commerce app for retro videogames built using SCSS React.js and a Firestore database. Features include a product carousel, a product grid, product order forms and a cart.
+          </p>
+          <p class="project__para project__para--link-container">
+            <a 
+              class="project__link" 
+              href="https://radiant-centaur-30b2cf.netlify.app/" 
+              target="_blank"
+            >
+              Click Here To Try It Out
+            </a>
           </p>
           <p class="project__para project__para--link-container">
             <a 
