--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main class="summary">
       <div class="summary__container">
-        <section class="summary__section">
+        <section class="summary__section summary__section--top">
           <h2 class="summary__heading">About Me</h2>
 
           <p class="summary__para">
@@ -76,7 +76,10 @@
               <i class="summary__icon fa-brands fa-css3-alt"></i>CSS / SCSS
             </li>
             <li class="summary__item">
-              <i class="summary__icon fa-brands fa-square-js"></i>JavaScript
+              <i
+                class="summary__icon summary__icon--extra-padding fa-brands fa-square-js"
+              ></i
+              >JavaScript
             </li>
             <li class="summary__item">
               <svg
@@ -111,7 +114,7 @@
               <svg
                 class="summary__icon summary__icon--svg"
                 xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 -6 32 32"
+                viewBox="0 -6 28 28"
               >
                 <g
                   xmlns="http://www.w3.org/2000/svg"
