Updates Tic-Tac-Toe and FakeOS project descriptions

--- a/projects.html
+++ b/projects.html
@@ -47,9 +47,7 @@
             <img class="project__image" src="./assets/images/tic-tac-toe.png" />
           </a>
           <p class="project__para">
-            A Tic-Toe-Tac game made using HTML, CSS, JavaScript, jQuery and the
-            Firebase Realtime Database. The game includes multiplayer
-            networking, enabling users to play over the internet.
+            A tic-tac-toe game made using HTML5, CSS, JavaScript and Firebase data storage. Features include score tracking and the ability to select player markers.
           </p>
           <p class="project__para project__para--link-container">
             <a 
@@ -76,7 +74,7 @@
             <img class="project__image" src="./assets/images/fake-os.png" />
           </div>
           <p class="project__para">
-            A fake operating system created using HTML, SCSS and JavaScript.
+            A fake operating system created using HTML, SCSS and JavaScript. Features include a fake start menu and three modals with simple apps.
           </p>
           <p class="project__para project__para--link-container">
             <a 
