Updates project descriptions

--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
             <img class="project__image" src="./assets/images/tic-tac-toe.png" />
           </a>
           <p class="project__para">
-            A tic-tac-toe game made using HTML5, CSS, JavaScript and Firebase data storage. Features include score tracking and the ability to select player markers.
+            A Tic-Tac-Toe game made using HTML5, CSS, JavaScript and a Firestore Database. Features include score tracking and the ability to select player markers.
           </p>
           <p class="project__para project__para--link-container">
             <a 
@@ -128,7 +128,7 @@
             <img class="project__image" src="./assets/images/react-e-shop.png" />
           </div>
           <p class="project__para">
-            A mock e-commerce app for retro videogames built using SCSS React.js and a Firestore database. Features include a product carousel, a product grid, product order forms and a cart.
+            A mock e-commerce app for retro videogames built using React.js and a Firestore Database. Features include a product carousel, a product grid, product order forms and a cart.
           </p>
           <p class="project__para project__para--link-container">
             <a 
