Updates about me

--- a/index.html
+++ b/index.html
@@ -39,18 +39,29 @@
           <h2 class="summary__heading">About Me</h2>
 
           <p class="summary__para">
-            I'm a Junior Software Engineer who graduated from General Assembly’s
-            Software Engineering Immersive course in March 2021 and has two
-            years of professional experience having worked for Livewire Markets
-            from May 2021 to March 2023.
+            I’m a smart, hard-working Junior Web Developer, who learned HTML5,
+            SCSS / CSS, Javascript, React.js, Ruby on Rails and PostgreSQL by
+            completing General Assembly's Software Engineering Immersive course.
+            After finishing the course in March 2021, I went on to work for
+            Livewire Markets as a Junior Software Engineer from May 2021 to
+            March 2023, where I put these skills into practise by building and
+            maintaining the Livewire website.​
           </p>
 
           <p class="summary__para">
-            I’m intelligent, humble, hard-working and eager to learn. I always
-            strive to write neat, efficient, readable code. You can rely on me
-            to spot coding errors from a mile away and not lose my cool when
-            things go wrong, as they often do in the tech world, though my
-            partner tells me I have a soft side too.
+            I am passionate about building a career in tech because I enjoy
+            building user-friendly applications, solving problems and learning
+            new skills. I always strive to write neat, efficient, readable code.
+            You can rely on me to spot coding errors from a mile away and not
+            lose my cool when things go wrong, as they often do in the tech
+            world. I also have strong communication and teamwork skills, having
+            worked a Customer Service Team Member for Coles and Kmart.​
+          </p>
+
+          <p class="summary__para">
+            I have also completed a Bachelor in Arts and Science at Monash
+            University. ​In my free time, I enjoy exercising, playing retro
+            video games and spending time with loved ones.
           </p>
 
           <p class="summary__para summary__para--link-container">
