Replaces coding image with profile pic

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       <img
         class="summary__image"
-        src="./assets/images/coding.jpeg"
+        src="./assets/images/profile_pic.jpeg"
         alt="Binary digits"
       />
     </main>
