Adds layout to skills page

--- a/skills.html
+++ b/skills.html
@@ -1,54 +1,136 @@
-<section class="summary__section">
-  <h2 class="summary__heading">My Skills</h2>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Pamela Heystek Portfolio</title>
+    <script
+      src="https://kit.fontawesome.com/2101b92750.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./assets/stylesheets/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=Oswald:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <h1 class="navbar__heading">
+          Pamela Heystek - Junior Software Engineer
+        </h1>
+        <ul class="navbar__buttons">
+          <li class="navbar__button navbar__button--selected">
+            <a class="navbar__link" href="./index.html">Home</a>
+          </li>
+          <li class="navbar__button">
+            <a class="navbar__link" href="./projects.html">Projects</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-  <ul class="summary__list">
-    <li class="summary__item">
-      <i class="summary__icon summary__icon--thin fa-brands fa-html5"></i>HTML
-    </li>
-    <li class="summary__item">
-      <i class="summary__icon summary__icon--thin fa-brands fa-css3-alt"></i>CSS
-      / SCSS
-    </li>
-    <li class="summary__item">
-      <i
-        class="summary__icon summary__icon--extra-padding fa-brands fa-square-js"
-      ></i
-      >JavaScript
-    </li>
-    <li class="summary__item">
-      <img
-        class="summary__icon summary__icon--svg"
-        src="./assets/images/typescript-icon.svg"
-        alt="TypeScript Icon"
-      />
-      TypeScript.js
-    </li>
-    <li class="summary__item">
-      <i class="summary__icon fa-brands fa-react"></i>React.js
-    </li>
-    <li class="summary__item">
-      <img
-        class="summary__icon summary__icon--svg"
-        src="./assets/images/ruby-on-rails-icon.svg"
-        alt="Ruby on Rails Icon"
-      />
-      Ruby on Rails
-    </li>
-    <li class="summary__item">
-      <img
-        class="summary__icon summary__icon--thick summary__icon--svg"
-        src="./assets/images/postrgresql-icon.svg"
-        alt="PostgreSQL Icon"
-      />
-      PostgreSQL
-    </li>
-    <li class="summary__item">
-      <i class="summary__icon summary__icon--thick fa-brands fa-ubuntu"></i
-      >Basic Unix Commands
-    </li>
-    <li class="summary__item">
-      <i class="summary__icon fa-brands fa-square-github"></i>Git Version
-      Control
-    </li>
-  </ul>
-</section>
+    <main class="summary">
+      <div class="summary__container">
+        <section class="summary__section">
+          <h2 class="summary__heading">My Skills</h2>
+
+          <ul class="summary__list">
+            <li class="summary__item">
+              <i
+                class="summary__icon summary__icon--thin fa-brands fa-html5"
+              ></i
+              >HTML
+            </li>
+            <li class="summary__item">
+              <i
+                class="summary__icon summary__icon--thin fa-brands fa-css3-alt"
+              ></i
+              >CSS / SCSS
+            </li>
+            <li class="summary__item">
+              <i
+                class="summary__icon summary__icon--extra-padding fa-brands fa-square-js"
+              ></i
+              >JavaScript
+            </li>
+            <li class="summary__item">
+              <img
+                class="summary__icon summary__icon--svg"
+                src="./assets/images/typescript-icon.svg"
+                alt="TypeScript Icon"
+              />TypeScript.js
+            </li>
+            <li class="summary__item">
+              <i class="summary__icon fa-brands fa-react"></i>React.js
+            </li>
+            <li class="summary__item">
+              <img
+                class="summary__icon summary__icon--svg"
+                src="./assets/images/ruby-on-rails-icon.svg"
+                alt="Ruby on Rails Icon"
+              />Ruby on Rails
+            </li>
+            <li class="summary__item">
+              <img
+                class="summary__icon summary__icon--thick summary__icon--svg"
+                src="./assets/images/postrgresql-icon.svg"
+                alt="PostgreSQL Icon"
+              />PostgreSQL
+            </li>
+            <li class="summary__item">
+              <i
+                class="summary__icon summary__icon--thick fa-brands fa-ubuntu"
+              ></i
+              >Basic Unix Commands
+            </li>
+            <li class="summary__item">
+              <i class="summary__icon fa-brands fa-square-github"></i>Git
+              Version Control
+            </li>
+          </ul>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <h2 class="footer__heading">Contact Details</h2>
+      <div class="footer__details">
+        <span class="footer__detail">
+          Email <i class="footer__icon fa-solid fa-envelope"></i> :
+          <a
+            class="footer__link"
+            href="mailto:pamela.e.heystek@gmail.com"
+            target="_blank"
+          >
+            pamela.e.heystek@gmail.com
+          </a>
+        </span>
+        <span class="footer__detail">
+          LinkedIn <i class="footer__icon fa-brands fa-linkedin"></i> :
+          <a
+            class="footer__link"
+            href="https://www.linkedin.com/in/pamela-heystek/"
+            target="_blank"
+          >
+            https://www.linkedin.com/in/pamela-heystek/
+          </a>
+        </span>
+        <span class="footer__detail">
+          GitHub
+          <i class="footer__icon footer__icon--rounded fa-brands fa-github"></i>
+          :
+          <a
+            class="footer__link"
+            href="https://github.com/PegliOne"
+            target="_blank"
+          >
+            https://github.com/PegliOne
+          </a>
+        </span>
+      </div>
+    </footer>
+  </body>
+</html>
