Adds skill page links to index, skills and projects pages

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,9 @@
           <li class="navbar__button">
             <a href="./index.html" class="navbar__link">Home</a>
           </li>
+          <li class="navbar__button">
+            <a href="./skills.html" class="navbar__link">Skills</a>
+          </li>
           <li class="navbar__button navbar__button--selected">
             <a href="./projects.html" class="navbar__link">Projects</a>
           </li>
