--- a/skills.html
+++ b/skills.html
@@ -26,6 +26,9 @@
           <li class="navbar__button navbar__button--selected">
             <a class="navbar__link" href="./index.html">Home</a>
           </li>
+          <li class="navbar__button navbar__button--selected">
+            <a class="navbar__link" href="./skills.html">Skills</a>
+          </li>
           <li class="navbar__button">
             <a class="navbar__link" href="./projects.html">Projects</a>
           </li>
