--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <a class="navbar__link" href="./index.html">Home</a>
           </li>
           <li class="navbar__button">
+            <a class="navbar__link" href="./skills.html">Skills</a>
+          </li>
+          <li class="navbar__button">
             <a class="navbar__link" href="./projects.html">Projects</a>
           </li>
         </ul>
