Updates project headings to match LinkedIn

--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
           </p>
         </div>
         <div class="projects__project">
-          <h3 class="project__heading">FakeOS: Windows 98</h3>
+          <h3 class="project__heading">Fake Windows 98</h3>
           <div class="project__image-container">
             <img class="project__image" src="./assets/images/fake-os.png" />
           </div>
@@ -126,7 +126,7 @@
           </p>
         </div>
         <div class="projects__project">
-          <h3 class="project__heading">React eShop</h3>
+          <h3 class="project__heading">Mock Retro Video Games eShop</h3>
           <div class="project__image-container">
             <img class="project__image" src="./assets/images/react-e-shop.png" />
           </div>
